--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 asgiref==3.8.1
+certifi==2025.4.26
+charset-normalizer==3.4.2
 Django==5.2.1
-sqlparse==0.5.3
-requests==2.31.0
+flake8==7.2.0
+idna==3.10
+mccabe==0.7.0
+pycodestyle==2.13.0
+pyflakes==3.3.2
 python-dotenv==1.0.0
+requests==2.31.0
+sqlparse==0.5.3
+typing_extensions==4.13.2
+urllib3==2.4.0
