--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ SECRET_KEY =
 DEBUG =
 TMDB_BASE_URL=
 TMDB_IMAGE_BASE_URL=
+GOOGLE_OAUTH_CLIENT_ID=id
+GOOGLE_OAUTH_CLIENT_SECRET=secret
+GOOGLE_OAUTH_CALLBACK_URL=url
