--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ asgiref==3.8.1
 certifi==2025.4.26
 charset-normalizer==3.4.2
 Django==5.2.1
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+dj-rest-auth[with_social]==6.0.0
+python-dotenv==1.0.1
 flake8==7.2.0
 idna==3.10
 mccabe==0.7.0
