chore: add missing newline and format .env.example for clarity

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ SECRET_KEY =
 DEBUG =
 TMDB_BASE_URL=
 TMDB_IMAGE_BASE_URL=
+
+SECRET_KEY=django-insecure-your-secret-key-replace-this-in-production
+
+# Debug mode
+DEBUG=True
+
 GOOGLE_OAUTH_CLIENT_ID=id
 GOOGLE_OAUTH_CLIENT_SECRET=secret
 GOOGLE_OAUTH_CALLBACK_URL=url
