feat: setup postgresql in backend

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,21 @@
+# Django
 SECRET_KEY=django-insecure-your-secret-key-replace-this-in-production
 DEBUG=True
+
+# TMDB
 API_KEY_TMDB_READ =
 API_KEY_TMDB =
 TMDB_BASE_URL=
 TMDB_IMAGE_BASE_URL=
+
+# Auth
 GOOGLE_OAUTH_CLIENT_ID=id
 GOOGLE_OAUTH_CLIENT_SECRET=secret
 GOOGLE_OAUTH_CALLBACK_URL=url
+
+# Database configuration
+DB_NAME =
+DB_USER =
+DB_PASSWORD =
+DB_HOST =
+DB_PORT =
