--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dj-rest-auth==6.0.0
 Django==5.2.1
 django-allauth==0.61.1
 django-cors-headers==4.4.0
+django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 flake8==7.2.0
