--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ django-cors-headers==4.4.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-spectacular>=0.27.0
+drf-spectacular-sidecar>=0.2.2
 flake8==7.2.0
 idna==3.10
 mccabe==0.7.0
