chore: update .env.example with API and database configuration

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@ SECRET_KEY=django-insecure-your-secret-key-replace-this-in-production
 DEBUG=True
 
 # TMDB
-API_KEY_TMDB_READ =
-API_KEY_TMDB =
-TMDB_BASE_URL=
-TMDB_IMAGE_BASE_URL=
+API_KEY_TMDB_READ=key
+API_KEY_TMDB=key
+TMDB_BASE_URL=https://api.themoviedb.org/3
+TMDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p/w500
 
 # Auth
 GOOGLE_OAUTH_CLIENT_ID=id
@@ -14,8 +14,9 @@ GOOGLE_OAUTH_CLIENT_SECRET=secret
 GOOGLE_OAUTH_CALLBACK_URL=url
 
 # Database configuration
-DB_NAME =
-DB_USER =
-DB_PASSWORD =
-DB_HOST =
-DB_PORT =
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=movie_picker
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=127.0.0.1
+DB_PORT=5432
