--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_DB: movie_picker
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
@@ -18,6 +34,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          sudo apt-get update
+          sudo apt-get install -y libpq-dev
           pip install -r requirements.txt
       - name: Lint with flake8
         run: |
@@ -25,6 +43,14 @@ jobs:
           flake8 movie_picker
       - name: Copy .env.example to .env
         run: cp .env.example .env
+      - name: Set up test environment variables
+        run: |
+          echo "DB_HOST=localhost" >> .env
+          echo "DB_PORT=5432" >> .env
+          echo "DB_USER=postgres" >> .env
+          echo "DB_PASSWORD=postgres" >> .env
+          echo "DB_NAME=movie_picker" >> .env
+          echo "DB_ENGINE=django.db.backends.postgresql" >> .env
       - name: Run migrations
         run: |
           python movie_picker/manage.py migrate
